Added .NET Standard project reference to Android and iOS projects Right-clicked on the References folder, chose "Edit References...", and selected the .NET Standard project.

--- a/iOS/AutomatedUITestTesting.iOS.csproj
+++ b/iOS/AutomatedUITestTesting.iOS.csproj
@@ -117,6 +117,12 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutomatedUITestTesting.Core\AutomatedUITestTesting.csproj">
+      <Project>{23A7186D-86DC-4947-839E-8BA49E49D00B}</Project>
+      <Name>AutomatedUITestTesting</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets')" />
 </Project>
