--- a/AutomatedUITestTesting.Core/AutomatedUITestTesting.csproj
+++ b/AutomatedUITestTesting.Core/AutomatedUITestTesting.csproj
@@ -20,4 +20,7 @@
       <DependentUpon>AutomatedUITestTestingPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+  </ItemGroup>
 </Project>
